# Heart-Disease-Kaggle-Competition

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.py
config/experimentation/: features_drop.yaml  id_feature_drop.yaml  new_features.yaml  new_models.yaml  placeholder.yaml  random_search.yaml  scaling.yaml  try.yaml  xgb_only.yaml
notebooks/: data_exploration.ipynb
src/: main.py
src/components/: data_ingestion.py  data_preprocessing.py  experimentation.py  feature_engineering.py  model_train.py
src/pipeline/: train_pipeline.py
